--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="cabecalho-container">
-            <a href="#" class="logo-cabecalho"><img src="imagem/autocare_logo_canto-removebg-preview.png" alt="AutoCare Logo"></a> 
-            <nav class="navegacao-cabecalho">
+            <a href="#" class="logo-cabecalho"><img src="imagem/autocare_logo_canto-removebg-preview.png" alt="AutoCare Logo" role="img"></a> 
+            <nav class="navegacao-cabecalho" aria-label="Menu principal">
                 <ul class="lista-navegacao">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre Nós</a></li>
@@ -29,7 +29,7 @@
                 <div class="circulo-externo">
                     <div class="circulo-interno">
                         <div class="conteudo-hero">
-                            <img class="autocare_logo_centro" src="imagem/autocare_logo_centro.png" alt="AutoCare Logo Central">
+                            <img class="autocare_logo_centro" src="imagem/autocare_logo_centro.png" alt="AutoCare Logo Central" role="img">
                             <p>Mantenha-se informado, mantenha-se no controle. AutoCare. <br> Sua central de informações automotivas, sempre ao seu serviço.</p>
                             <a href="entrar.html" class="botao-hero">Começar consulta</a>
                         </div>
