--- a/sobre.html
+++ b/sobre.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="cabecalho-container">
-            <a href="#" class="logo-cabecalho"><img src="imagem/autocare_logo_canto-removebg-preview.png" alt="AutoCare Logo"></a> 
-            <nav class="navegacao-cabecalho">
+            <a href="#" class="logo-cabecalho"><img src="imagem/autocare_logo_canto-removebg-preview.png" alt="AutoCare Logo" role="img"></a> 
+            <nav class="navegacao-cabecalho" aria-label="Menu principal">
                 <ul class="lista-navegacao">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre Nós</a></li>
