--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -9,8 +9,8 @@
 <body onload="initMap()">
     <header>
         <div class="cabecalho-container">
-            <a href="#" class="logo-cabecalho"><img src="imagem/autocare_logo_canto-removebg-preview.png" alt="AutoCare Logo"></a> 
-            <nav class="navegacao-cabecalho">
+            <a href="#" class="logo-cabecalho"><img src="imagem/autocare_logo_canto-removebg-preview.png" alt="AutoCare Logo" role="img"></a> 
+            <nav class="navegacao-cabecalho" aria-label="Menu principal">
                 <ul class="lista-navegacao">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre Nós</a></li>
@@ -35,7 +35,7 @@
                     <p>Status de Manutenção: Troca de óleo necessária!</p>
                 </div>
                 <div class="veiculo-foto">
-                    <img src="imagem/carro-cliente.png" alt="Foto do Veículo do Cliente">
+                    <img src="imagem/carro-cliente.png" alt="Foto do Veículo do Cliente" role="img">
                 </div>
             </div>
 
@@ -81,7 +81,7 @@
 
         <section class="mapa-oficinas">
             <h2>Mapa de Oficinas Parceiras</h2>
-            <div id="mapa"></div> 
+            <div id="mapa" role="application" aria-label="Mapa de oficinas parceiras"></div> 
         </section>
     </main>
 
@@ -109,10 +109,8 @@
     <script>
        
         function initMap() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function(position) {
+            if (navigator.geolocation) {               navigator.geolocation.getCurrentPosition(function(position) {
                     var userLocation = {
-                        lat: position.coords.latitude,
                         lat: position.coords.latitude,
                         lng: position.coords.longitude
                     };
